added editing profile, added fields to user model, although will need to extend base user in mode and adjust methods, field attributes

--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -20,7 +20,7 @@
         <br />
       </div>
 
-      <form action="" method="post">
+      <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %} {{ form  }}
         {% if form.errors %}
         No!
